--- a/src/NBT.WebUI/Components/Pages/Home.razor.css
+++ b/src/NBT.WebUI/Components/Pages/Home.razor.css
@@ -267,7 +267,7 @@
 }
 
 .student-illustration {
-    width: 100%;
+    width: 60%;
     height: auto;
     display: block;
     border-radius: 16px;
@@ -275,6 +275,7 @@
     z-index: 1;
     border: none;
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+    margin: 0 auto;
 }
 
 @keyframes fadeInUp {
